testdata/merge/valid/01_simple_string.reg
Windows Registry Editor Version 5.00

[HKEY_LOCAL_MACHINE\SOFTWARE\TestApp]
"Version"="1.0.0"
