testdata/merge/invalid/err_bad_header.reg
Windows Registry Editor Version 4.00

[HKEY_LOCAL_MACHINE\SOFTWARE\Test]
"Value"="Data"
